# pem

./: README.md  chat-message-pipeline.md  package-lock.json  package.json
api/: .env.copy  .env.example  .gitignore  README.md  drizzle.config.ts  package-lock.json  package.json  pyproject.toml
api/api-tests/: api.http  index.http
api/app/: main.py
api/app/core/: bootstrap.py  clerk_jwt.py  config.py  database.py  registry.py
api/app/middlewares/: correlation_middleware.py  cors.py  limiter.py  request_size_limit.py  security_headers.py
api/app/models/: __init__.py  dump_model.py  prep_model.py  user_model.py
api/app/routers/: __init__.py  clerk_webhook_routes.py  user_routes.py
api/app/services/: __init__.py  user_service.py
api/drizzle/: 0000_busy_punisher.sql  0000_lonely_silver_centurion.sql  0001_big_captain_america.sql  0001_numerous_hellfire_club.sql  0002_minor_slayback.sql  0002_windy_zaladane.sql  0003_melted_phalanx.sql  0003_yielding_norman_osborn.sql  0005_eminent_khan.sql  0008_amazing_trish_tilby.sql  0011_extract_close_holding.sql  0013_motionless_moondragon.sql
api/drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  0002_snapshot.json  0003_snapshot.json  0006_snapshot.json  0007_snapshot.json  0011_snapshot.json  0012_snapshot.json  0013_snapshot.json  0014_snapshot.json  0015_snapshot.json  _journal.json
api/migrations/: env.py
api/migrations/versions/: ca2e1ab0dd2f_add_dump_and_prep_tables.py  f5baf9392bd0_initial.py
api/src/: app.module.ts  main.ts
api/src/database/: database.module.ts  database.service.ts
app/: app.json  (+6 more)
(+1012 files in other folders)
